oasis-build/tests/ui/no_service_impl.stderr
error: Missing definition of `Counter::new`.
 --> $DIR/no_service_impl.rs:4:1
  |
4 | pub struct Counter(u32);
  | ^^^^^^^^^^^^^^^^^^^^^^^^

error: aborting due to previous error

